crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_non_witness_binder_in_assert.rs
/*@
fn is_zero(x: i32) -> bool {
    x == 0i32
}
*/

fn main() {
    //@ assert !is_zero(?x);
}
